--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.301
+        installationPath: $(Agent.ToolsDirectory)/dotnet
 
     # publishes Blazor project to the release-folder
     - name: Publish .NET Core Project
